# project-euler-solutions

./: .gitignore  README.md  pyproject.toml
solutions/problem_1/: solution.py
solutions/problem_2/: solution.py
solutions/problem_3/: solution.py
solutions/problem_4/: solution.py
solutions/problem_5/: solution.py
solutions/problem_6/: solution.py
solutions/problem_7/: solution.py
tests/: test_problem_1.py  test_problem_2.py  test_problem_3.py  test_problem_4.py  test_problem_5.py  test_problem_6.py  test_problem_7.py
