[tool.poetry]
name = "project-euler-solutions"
version = "0.1.0"
description = "My solutions to problems from [Project Euler](https://projecteuler.net/)"
authors = ["JAlbertoSoriaR <soriajs1312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
